# skull_stripping

./: README  README.md
data/: DS_HC0010_mprage_labels_EMS.nrrd
src/: .CMakeLists.txt.swp  .mainwindow.cpp.swp  .strip.cpp.swp  CMakeLists.txt  csv_writer.cpp  csv_writer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  strip.cpp  strip.h
